<resources>
    <string name="app_name">HealthQuest</string>
    <string name="button.finish">Done</string>
    <string name="button.next">Next</string>
    <string name="button.skip">Skip</string>
    <string name="input_your">Input your</string>
    <string name="company_code">COMPANY CODE</string>
    <string name="input_company_code">Input Company Code</string>
    <string name="question_mark">\?</string>
    <string name="get_company_code">"\"Company code is needed to continue\nusing the app. Get your company\ncode from your HR\" "</string>

    <string name="app_name_inside">Challenge Yourself</string>
    <string name="app_name_bar">Challenge Yourself</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_wclogin">WCLogin</string>
    <string name="title_activity_choose_tracker">ChooseTracker</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_signup_one">SignupOne</string>
    <string name="title_activity_signup_two">SignupTwo</string>
    <string name="title_activity_callback">TabActivity</string>
    <string name="usrnm">Username</string>
    <string name="email">E-mail</string>
    <string name="pass">Password</string>
    <string name="save">Save</string>
    <string name="con_pass">Confirm Password</string>
    <string name="login">Login</string>
    <string name="forgot_pass">Forgot Password ?</string>
    <string name="new_user">New User</string>
    <string name="zip">Zip Code</string>
    <string name="text_sample_id">text sample id</string>
    <string name="accept">Accept</string>


    <string name="empty_user_name_err_txt">Please enter Username</string>
    <string name="empty_email_name_err_txt">Please enter Email</string>
    <string name="empty_pass_err_txt">Please enter password</string>
    <string name="admymo">mymo is not added to your account. would you like to add mymo or want to continue?</string>
    <string name="changepass">Please check your registered email.</string>
    <string name="wrngusernameemail">Please provide registered username or email id.</string>
    <string name="plz_wt">Please wait&#8230;</string>
    <string name="wrongusernamepass">Username or password is incorrect. Please check.</string>
    <string name="userregistered">User with this email is already registered.</string>
    <string name="login_server_err">Unable to Login.Please try again.</string>
    <string name="universal_err">Some network error occurred.Please try again.</string>
    <string name="no_internet">Please check your internet connection.</string>
    <string name="no_camera_txt">Camera not found.</string>
    <string name="no_gallery_txt">Gallery not found.</string>
    <string name="cancel">Cancel</string>
    <string name="choose_image">Choose image from</string>
    <string name="user_err_txt">Please provide a valid Username</string>
    <string name="user_len_err_txt">Username must be between 3 to 10 Character long.</string>
    <string name="user_empty_err_txt">Username should not be empty.</string>
    <string name="email_err_txt">Please provide a valid email id.</string>
    <string name="pass_err_txt">Password must be atleast 8 characters long</string>
    <string name="pass_mismatch_txt">Password and Confirm Password are not matching.</string>
    <string name="signup_success_msg">User registered successfully.</string>
    <string name="select_gender_txt">Please select a gender.</string>
    <string name="signup_server_err">Unable to Signup.Please try again.</string>
    <string name="username_exists_err">Username already exists</string>
    <string name="email_exists_err">Email address already exists</string>
    <string name="enterheight">Enter Height</string>
    <string name="enterweight">Enter Weight</string>
    <string name="cm">Centimeters</string>
    <string name="inch">Inch</string>
    <string name="feet">Feet</string>
    <string name="height">HEIGHT</string>
    <string name="weight">WEIGHT</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="kg">Kg</string>
    <string name="lbs">lbs</string>
    <string name="done">Done</string>
    <string name="fname_err_txt">Please enter your first name.</string>
    <string name="lname_err_txt">Please enter your last name.</string>
    <string name="empty_height_txt">Please select your height.</string>
    <string name="empty_weight_txt">Please select your weight.</string>
    <string name="empty_dob_txt">Please select your date of birth.</string>
    <string name="empty_city_txt">Please select your city.</string>
    <string name="empty_country_txt">Please select your country.</string>
    <string name="usernameoremail">Username or email</string>
    <string name="pleaseenter">Please enter your username.</string>
    <string name="plzprovideusernameid">Please provide a valid username or email id.</string>
    <string name="steps_len">STEPS LENGTH</string>
    <string name="rightusernameemail">A password reset link has been sent to your email id.</string>
    <string name="prompt">Choose a name</string>
    <string name="fname">First name</string>
    <string name="lname">Last name</string>
    <string name="birthdt">Date of birth</string>
    <string name="facebook_app_id">326037627746652</string>
    <string name="title_activity_temp_dashboard">TempDashboard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="googlefit">GOOGLE FIT</string>
    <string name="mymo">MYMO</string>
    <string name="jawbone">JAWBONE</string>
    <string name="fitbit">FITBIT</string>
    <string name="choose_tracker">CHOOSE YOUR TRACKER</string>
    <string name="title">Title</string>
    <string name="action_chat">Chat</string>
    <string name="action_help">Help</string>
    <string name="click">Click here to \nADD IMAGE</string>

    <string name="device_is">This mymo device is linked to other user.</string>
    <string name="user_is">There is already a mymo linked to this account.</string>
    <string name="user_is_not">user is not logged in.</string>
    <string name="unknown_device">it is an unknown device type.</string>
    <string name="try_again">Unable to connect.Please try again.</string>
    <string name="connected">Device connected</string>
    <string name="enter_serial">Please enter mymo serial number.</string>
    <string name="enter_valid_serial">Please enter a valid mymo serial number.</string>


    <!-- chat resources-->
    <string name="action_gcm_register">Enable Notifications</string>
    <string name="action_gcm_unregister">Disable Notifications</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Username</string>
    <string name="login_submit">Join the Chat!</string>

    <string name="enter_new_channel">Enter new channel:</string>
    <string name="send_message">Send a message...</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="here_now">Here Now:</string>
    <string name="network_not_connected">Slow connection Please Try again later</string>
    <string name="not_allowed">You are not allowed to login.</string>
    <string name="not_allowed_Activate">Login failed. Account needs to be activated. Please check your email for the activation link.</string>
    <string name="account_blocked">Login failed. Account is blocked.</string>
    <string name="empty_zip_txt">Please Enter Zip Code</string>
    <string name="usernameChar">1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^*()_+{}:"|?</string>
    <string name="invalid_zip">Zipcode length is invalid</string>
    <string name="type_your_message">Type your message here...</string>
    <string name="thanks_register">Thank you for registering an account.\n A message has been sent to your email for account activation.  </string>
    <!-- chat resources ends-->


    <string name="msg_perm_acquired">All permissions should be acquired</string>
    <string name="msg_conn_not_available">Connection with Samsung Health is not available</string>
    <string name="msg_req_install">Please install Samsung Health</string>
    <string name="msg_req_upgrade">Please upgrade Samsung Health</string>
    <string name="msg_req_enable">Please enable Samsung Health</string>
    <string name="msg_req_agree">Please agree with Samsung Health policy</string>
    <string name="msg_req_available">Please make Samsung Health available</string>
</resources>
