<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.tupelo.wellness.MainActivity">

    <item android:id="@+id/action_here_now" android:title="0"
        android:orderInCategory="1" app:showAsAction="always"/>
    <item android:id="@+id/action_gcm_register" android:title="@string/action_gcm_register"
        android:orderInCategory="2" app:showAsAction="never" />
    <item android:id="@+id/action_gcm_unregister" android:title="@string/action_gcm_unregister"
        android:orderInCategory="3" app:showAsAction="never" />
    <item android:id="@+id/action_sign_out" android:title="@string/action_sign_out"
        android:orderInCategory="4" app:showAsAction="never" />
</menu>
