<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <com.tupelo.wellness.numberpicker.NumberPicker
            android:id="@+id/metricValueBeforeDecimalPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <com.tupelo.wellness.view.NewTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="."
            android:textColor="#F000"
            android:textSize="100sp" />

        <com.tupelo.wellness.numberpicker.NumberPicker
            android:id="@+id/metricValueAfterDecimalPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/lengthUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout1"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/cmUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cm" />

        <RadioButton
            android:id="@+id/incheUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feet" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/weightUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lengthUnits"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/kgUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg" />

        <RadioButton
            android:id="@+id/lbsUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbs" />
    </RadioGroup>

    <com.tupelo.wellness.view.NewButton
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weightUnits"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
android:layout_marginBottom="5dp"
        android:text="@string/done" />

</RelativeLayout>