<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/dph15">


    <TextView
        android:id="@+id/headerText"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:gravity="center"
        android:textSize="@dimen/sp16" />


    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerText"
        android:layout_marginBottom="@dimen/dph15"
        android:layout_marginTop="@dimen/dph10"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/metricValueBeforeDecimalPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />


        <LinearLayout
            android:layout_width="@dimen/dph30"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="."
                android:gravity="center_horizontal|bottom"
                android:textSize="50sp"
                android:layout_weight="1"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <NumberPicker
            android:id="@+id/metricValueAfterDecimalPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/lengthUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout1"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/cmUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radio_profile"
            android:text="@string/cm" />

        <RadioButton
            android:id="@+id/incheUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dph15"
            android:button="@drawable/radio_profile"
            android:text="@string/feet" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/weightUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lengthUnits"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/kgUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radio_profile"
            android:text="@string/kg" />


        <RadioButton
            android:id="@+id/lbsUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dph15"
            android:button="@drawable/radio_profile"
            android:text="@string/lbs" />
    </RadioGroup>


    <com.tupelo.wellness.view.NewTextView
        android:id="@+id/submitBtn"
        android:layout_width="@dimen/dph120"
        android:layout_height="@dimen/dph35"
        android:layout_below="@+id/weightUnits"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dph15"
        android:gravity="center"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="@dimen/dph14"
        app:font="regular" />


</RelativeLayout>